--- a/Menu.html
+++ b/Menu.html
@@ -37,7 +37,7 @@
 
   <section>
     <h2>Cakes</h2>
-    <img src="images/cake.jpg" alt="Cake" class="menu-img">
+    <img src="images/cake.jpg" alt="Cake"> class="menu-img">
     <p><button onclick="toggleFlavors()">View Flavors</button></p>
     <ul id="cakeFlavors" class="hidden">
       <li>Chocolate</li>
